--- a/src/styles/checkbox.sass
+++ b/src/styles/checkbox.sass
@@ -6,33 +6,24 @@
   width: 100%
   height: 100%
   flex-direction: row
+  gap: 1rem
+  padding-top: 0.5rem
+  align-items: center
+
 
 .CheckboxRoot
-  background-color: white
-  width: 25px
-  height: 25px
-  border-radius: 4px
-  flex-direction: column
-  margin-right: 0.5rem
   display: flex
+  background-color: white
+  width: 1.5rem
+  height: 1.5rem
+  border-radius: 0.5rem
+  margin-color: gray
+  flex-direction: column
   align-items: center
-  justify-content: center
-  box-shadow: 0 2px 10px var(--black-a7)
 
-  &:hover
-    background-color: var(--violet-3)
+  &.isChecked
+    background-color: green
 
-  &:focus
-    box-shadow: 0 0 0 2px black
-
-.CheckboxIndicator
-  color: var(--violet-11)
-
-.Label
-  color: white
-  padding-left: 15px
-  font-size: 15px
-  line-height: 1
 
 .TreeViewRoot
   display: flex
@@ -41,4 +32,18 @@
   flex-direction: column
 
 .CollapsibleContent
-  padding-left: 1.5rem
+  padding-left: 2rem
+
+.icon
+  color: white
+  size: 2 rem
+  stroke-width: 2 rem
+
+.chevronIconContainer
+  display: flex
+  align-items: center
+  visibility: hidden
+  color: gray
+
+  &.hasChildren
+    visibility: visible
